# singularity-edit

./: CONTRIBUTING.md  README.md  meson.build
data/: dev.sinty.edit.desktop  dev.sinty.edit.gschema.xml  dev.sinty.edit.json
data/queries/: README.md
po/: POTFILES.in  meson.build
resources/: dev.sinty.edit.gresource.xml
src/: app.vala  command_palette.vala  editor_tab.vala  file_browser_pane.vala  find_bar.vala  main.vala  markdown.vala  status_bar.vala  tree-sitter.vapi  tree_sitter_grammars.h  ts_folding.vala  ts_highlighter.vala  ts_lang_registry.vala  ts_outline.vala  window.vala
ui/: main.vetro
